--- a/frostdates/cloudify_integration/Dockerfile
+++ b/frostdates/cloudify_integration/Dockerfile
@@ -2,7 +2,7 @@ FROM conda/miniconda3
 
 RUN conda update conda \
  && conda install -c conda-forge -y \
-    #pillow \
+    pillow geojson \
     gdal==2.4.1 \
  && conda install -c esri netcdf4 \
     #jinja2 \
@@ -13,11 +13,7 @@ RUN mkdir /frostdates
 RUN mkdir /frostdates/data
 RUN mkdir /frostdates/export
 
-ENV INPUT_FOLDER /var/data/
-ENV OUTPUT_FOLDER /var/output/
-
 COPY python_code /opt/scripts
-
 WORKDIR /opt/scripts
 
-CMD python3 xalkidiki.py
+CMD python3 frostdates.py
