--- a/frostdates/cloudify_integration/Dockerfile
+++ b/frostdates/cloudify_integration/Dockerfile
@@ -3,7 +3,8 @@ FROM conda/miniconda3
 RUN conda update conda \
  && conda install -c conda-forge -y \
     pillow geojson \
-    gdal==2.4.1 \
+    mpi4py \
+   # gdal==2.4.1 \
  && conda install -c esri netcdf4 \
     #jinja2 \
     #psycopg2 \cp 
@@ -16,4 +17,6 @@ RUN mkdir /frostdates/export
 COPY python_code /opt/scripts
 WORKDIR /opt/scripts
 
-CMD python3 frostdates.py
+RUN chmod +x frostdates  
+CMD mpirun -np 2 ./frostdates
+#CMD python3 frostdates.py
